--- a/Kuanysh_Aitzhanov_style.css
+++ b/Kuanysh_Aitzhanov_style.css
@@ -87,6 +87,10 @@ iframe {
     box-shadow: 4px 7px 3px darkslategray;
 }
 
+p.description {
+    font-weight: bold;
+}
+
 section h2 {
     color: #00bfa5;
     margin-bottom: 15px;
