--- a/GazizaDesign.css
+++ b/GazizaDesign.css
@@ -1,6 +1,6 @@
 .registration{
-    background-color: mediumspringgreen;
-    color: white;
+    background-color: darkseagreen;
+    font-palette: black;
     border: 2px solid black;
 }
 
