--- a/GazizaDesign.css
+++ b/GazizaDesign.css
@@ -1,7 +1,28 @@
+input{
+    font-size: 18px;
+    padding: 15px 20px;
+    border: 2px solid #007BFF;
+    border-radius: 10px;
+    outline: medium;
+    font-family: "Al Nile";
+}
+label{
+    font-size: 18px;
+    padding: 15px 20px;
+    text-align: center;
+    font-family: "Arial Rounded MT Bold";
+}
+
+
 .registration{
     background-color: darkseagreen;
     font-palette: black;
     border: 2px solid black;
+    width: 300px;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 0 auto;
+
 }
 
 
