--- a/GazizaDesign.css
+++ b/GazizaDesign.css
@@ -14,6 +14,7 @@ label{
 }
 
 
+
 .registration{
     background-color: darkseagreen;
     font-palette: black;
@@ -27,11 +28,12 @@ label{
 
 
 @keyframes med {
-    0%   {background-color:red; left:0px; top:0px;}
-    25%  {background-color:yellow; left:200px; top:0px;}
-    50%  {background-color:blue; left:200px; top:200px;}
-    75%  {background-color:green; left:0px; top:200px;}
-    100% {background-color:red; left:0px; top:0px;}
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .tabletka {
@@ -39,5 +41,13 @@ label{
     height: 100px;
     position: relative;
     animation-name: med;
-    animation-duration: 4s;
+    animation: med 4s linear infinite;
+}
+
+img{
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    align-self: center;
 }
