--- a/GazizaDesign.css
+++ b/GazizaDesign.css
@@ -6,6 +6,24 @@ input{
     outline: medium;
     font-family: "Al Nile";
 }
+select{
+    font-size: 18px;
+    padding: 15px 20px;
+    border: 2px solid #007BFF;
+    border-radius: 10px;
+    outline: medium;
+    font-family: "Al Nile";
+}
+
+textarea{
+    font-size: 18px;
+    padding: 15px 20px;
+    border: 2px solid #007BFF;
+    border-radius: 10px;
+    outline: medium;
+    font-family: "Al Nile";
+}
+
 label{
     font-size: 18px;
     padding: 15px 20px;
@@ -13,19 +31,16 @@ label{
     font-family: "Arial Rounded MT Bold";
 }
 
-
-
 .registration{
     background-color: darkseagreen;
     font-palette: black;
     border: 2px solid black;
-    width: 300px;
+    width: 800px;
     padding: 20px;
     border-radius: 10px;
     margin: 0 auto;
 
 }
-
 
 @keyframes med {
     from {
@@ -51,3 +66,4 @@ img{
     margin: 0 auto;
     align-self: center;
 }
+
