--- a/GazizaDesign.css
+++ b/GazizaDesign.css
@@ -1,11 +1,15 @@
 input{
-    font-size: 18px;
+    font-size: 30px;
     padding: 15px 20px;
     border: 2px solid #007BFF;
     border-radius: 20px;
     width: 450px;
     outline: medium;
     font-family: "Al Nile";
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+
 }
 select{
     font-size: 18px;
