--- a/Liana_style.css
+++ b/Liana_style.css
@@ -108,7 +108,7 @@ section td:last-child {
     font-weight: bold;
     text-align: center;
 }
-
+/*form style*/
 form label {
     font-weight: bold;
 }
