--- a/Kuanysh_Aitzhanov_style.css
+++ b/Kuanysh_Aitzhanov_style.css
@@ -121,4 +121,67 @@ section a:hover {
     box-shadow: 4px 7px 3px darkslategray;
 }
 
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.05);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
 
+h1 {
+    animation: pulse 2s ease forwards;
+}
+
+@keyframes slide {
+    0% {
+        opacity: 0;
+        transform: translateY(100px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+section {
+    animation: slide 1s ease forwards;
+}
+
+blockquote {
+    animation: slide 1s ease forwards;
+}
+
+@keyframes zoomIn {
+    0% {
+        transform: scale(0.5);
+        opacity: 0;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+.img {
+    animation: zoomIn 1s ease forwards;
+}
+
+@keyframes slideLeft {
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+nav {
+    opacity: 1;
+    transform: translateX(-100%);
+    animation: slideLeft 0.6s ease forwards;
+}
