--- a/Kuanysh_Aitzhanov_style.css
+++ b/Kuanysh_Aitzhanov_style.css
@@ -44,6 +44,8 @@ nav ul li a:hover {
     background-color: #00bfa5;
     color: white;
     border-radius: 5px;
+    transition: background-color 0.2s ease, transform 0.2s ease;
+    transform: scale(1.2);
 }
 
 section {
