--- a/Liana_style.css
+++ b/Liana_style.css
@@ -10,7 +10,7 @@ article {
 
 article p {
     color: #555;
-    font-size: 18px;
+    font-size: 15px;
     margin-top: 20px;
     margin-bottom: 10px;
 }
@@ -27,7 +27,7 @@ article ul li {
 
 h3 {
     color: #555;
-    font-size: 23px;
+    font-size: 18px;
     margin-top: 20px;
     margin-bottom: 10px;
 }
@@ -52,7 +52,7 @@ section table {
 
 section th, section td {
     text-align: left;
-    padding: 12px;
+    padding: 10px;
     border: 1px solid #ddd;
 }
 
@@ -115,6 +115,7 @@ section td:last-child {
 
 form input[type="text"],
 form select {
+    font-size: 0.8em;
     width: 50%;
     padding: 10px;
     margin-bottom: 15px;
@@ -132,13 +133,11 @@ form input[type="submit"] {
     background-color: #00bfa5;
     color: white;
     border: none;
-    padding: 10px 20px;
-    font-size: 1.1em;
+    padding: 10px 15px;
+    font-size: 0.9em;
     cursor: pointer;
     border-radius: 4px;
     transition: background-color 0.3s ease;
-
-
 
 }
 
@@ -149,7 +148,7 @@ form input[type="submit"]:hover {
 /* fieldset */
 fieldset {
     border: 1px solid #ccc;
-    padding: 20px;
+    padding: 10px;
     margin-bottom: 20px;
     border-radius: 8px;
     transition: background-color 0.3s ease;
@@ -159,9 +158,12 @@ fieldset:hover {
 }
 
 legend {
-    font-size: 1.2em;
+    font-size: 1.1em;
     font-weight: bold;
     color:darkslategray;
+}
+section label{
+    font-size: 0.9em;
 }
 
 section a {
@@ -170,8 +172,8 @@ section a {
     text-decoration: none;
     background-color: #00bfa5;
     color: white;
-    padding: 5px 10px;
-    font-size: 0.9em;
+    padding: 8px 13px;
+    font-size: 1em;
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
@@ -181,26 +183,27 @@ section a:hover {
 }
 
 
-.typing-demo {
-    font-family: Arial, Bold; /* Monospace font like a typewriter */
-    white-space: nowrap;               /* Ensure text doesn't wrap */
-    overflow: hidden;                  /* Hide the overflow text */
-    width: 0;                          /* Start with no visible text */
-    animation: typing 3.5s steps(40, end) forwards, blink-caret 0.75s step-end infinite;
+/*.typing-demo {*/
+/*    font-family: Arial, Bold; !* Monospace font like a typewriter *!*/
+/*    white-space: nowrap;               !* Ensure text doesn't wrap *!*/
+/*    overflow: hidden;                  !* Hide the overflow text *!*/
+/*    width: 0;                          !* Start with no visible text *!*/
+/*    animation: typing 3.5s steps(40, end) forwards, blink-caret 0.75s step-end infinite;*/
 
-}
+/*}*/
 
-/* Typing animation */
-@keyframes typing {
-    from { width: 0; }
-    to { width: 25%; } /* this to match the desired text length */
-}
+/*!* Typing animation *!*/
+/*@keyframes typing {*/
+/*    from { width: 0; }*/
+/*    to { width: 25%; } !* this to match the desired text length *!*/
+/*}*/
 
 section ul {
     list-style: none;
     padding: 0;
 }
 section ul li {
+    font-size: 0.9em;
     opacity: 0;
     transform: scale(0.8); /* Start with a smaller size */
     animation: scaleUp 0.5s forwards; /* Scale-up animation */
