--- a/GazizaDesign.css
+++ b/GazizaDesign.css
@@ -127,4 +127,46 @@ summary{
     border-block-end: #555555;
 }
 
+select {
+    appearance: none;
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 16px;
+    width: 400px;
+    outline: none;
+    cursor: pointer;
+    text-align: center;
+}
 
+select {
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+}
+
+select:hover {
+    border-color: #888;
+}
+
+option {
+    padding: 10px;
+    background-color: #fff;
+    border-bottom: 1px solid #eee;
+}
+
+select option:hover {
+    background-color: #f7f7f7;
+}
+
+option:disabled {
+    color: #999;
+}
+
+option:hover {
+    background-color: #f7f7f7;
+}
+
+option:disabled:hover {
+    background-color: #f7f7f7;
+}
