--- a/GazizaDesign.css
+++ b/GazizaDesign.css
@@ -3,7 +3,7 @@ input{
     padding: 15px 20px;
     border: 2px solid #cccccc;
     border-radius: 20px;
-    width: 450px;
+    width: 300px;
     outline: medium;
     /*font-family: "Al Nile";*/
     margin-left: auto;
@@ -60,7 +60,7 @@ label{
     background-color: #eaf7e9;
     font-palette: black;
     border: 2px solid black;
-    width: 600px;
+    width: 400px;
     padding: 20px;
     border-radius: 10px;
     margin-left: auto;
@@ -91,8 +91,8 @@ img{
     max-width: 100%;
     height: auto;
     display: block;
-    margin: 0 auto;
-    align-self: center;
+    margin: auto;
+    align-self: auto;
 }
 
 details{
