--- a/GazizaDesign.css
+++ b/GazizaDesign.css
@@ -158,7 +158,7 @@ select {
     background-position: right 10px center;
 }
 
-select:hover {
+/*select:hover {
     border-color: #888;
 }
 
@@ -182,4 +182,4 @@ option:hover {
 
 option:disabled:hover {
     background-color: #f7f7f7;
-}
+}*/
