--- a/GazizaDesign.css
+++ b/GazizaDesign.css
@@ -12,7 +12,7 @@ input{
     transition: transform 0.3s ease-in-out;
 }
 
-input[type="submit"] {
+/*input[type="submit"] {
     background-color: #00bfa5;
     color: white;
 }
@@ -26,7 +26,7 @@ input:hover{
 input [type="date"] {
     margin-left: auto;
     margin-right: auto;
-}
+}*/
 
 select{
     font-size: 18px;
