--- a/Liana_style.css
+++ b/Liana_style.css
@@ -1,68 +1,69 @@
 /*article designs*/
-article {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    margin: 20px;
-    padding: 20px;
-    background-color: white;
+/*article {*/
+/*    font-family: Arial, sans-serif;*/
+/*    line-height: 1.6;*/
+/*    margin: 20px;*/
+/*    padding: 20px;*/
+/*    background-color: white;*/
 
-}
+/*}*/
 
 article p {
-    color: #555;
+    font-family: "Times New Roman", Times, serif;
+    color: black;
     font-size: 15px;
     margin-top: 20px;
     margin-bottom: 10px;
 }
 
-article ul {
-    list-style-type: disc;
-    padding-left: 20px;
-}
+/*article ul {*/
+/*    list-style-type: disc;*/
+/*    padding-left: 20px;*/
+/*}*/
 
 article ul li {
+    font-family: "Times New Roman", Times, serif;
     font-size: 18px;
-    color: orange;
 }
 
 h3 {
-    color: #555;
+    color: black;
     font-size: 18px;
     margin-top: 20px;
     margin-bottom: 10px;
 }
 
 /*article list*/
-article ul li {
-    color: orange;
-}
+/*article ul li {*/
+/*    color: orange;*/
+/*}*/
 
 article h3{
-    color: #00bfa5;
+    color:#19585a;
 }
 
 /* table design */
-section table {
-    width: 70%;
-    margin: 20px 0;
-    border-collapse: collapse;
-    background-color: white;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-    margin-left: auto;
-    margin-right: auto;
+/*section table {*/
+/*    width: 70%;*/
+/*    margin: 20px 0;*/
+/*    border-collapse: collapse;*/
+/*    background-color: white;*/
+/*    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);*/
+/*    margin-left: auto;*/
+/*    margin-right: auto;*/
 
-}
+/*}*/
 
-section th, section td {
-    text-align: left;
-    padding: 10px;
-    border: 1px solid #ddd;
-}
+/*section th, section td {*/
+/*    text-align: left;*/
+/*    padding: 10px;*/
+/*    border: 1px solid #ddd;*/
+/*}*/
 
-section th {
-    background-color: #00bfa5;
-    color: white;
-}
+/*section th {*/
+/*    background-color: #00bfa5;*/
+/*    color: white;*/
+/*}*/
 
  /*table effect*/
 section tr {
@@ -82,22 +83,22 @@ section td img {
 }
 
 
-/* appointment button */
- td a {
-    display: inline-block;
-    margin-top: 10px;
-    text-decoration: none;
-    background-color: #00bfa5;
-    color: white;
-    padding: 5px 10px;
-    font-size: 0.9em;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
+/*!* appointment button *!*/
+/* td a {*/
+/*    display: inline-block;*/
+/*    margin-top: 10px;*/
+/*    text-decoration: none;*/
+/*    background-color: #00bfa5;*/
+/*    color: white;*/
+/*    padding: 5px 10px;*/
+/*    font-size: 0.9em;*/
+/*    border-radius: 5px;*/
+/*    transition: background-color 0.3s ease;*/
+/*}*/
 
- td a:hover {
-    background-color: #7f8c8d;
-}
+/* td a:hover {*/
+/*    background-color: pink;*/
+/*}*/
 
 figcaption {
     text-align: left;
@@ -105,19 +106,19 @@ figcaption {
     color: #666;
 }
 
-/* days higlight */
-section td:last-child {
-    background-color: #eaf7e9;
-    font-weight: bold;
-    text-align: center;
-}
+/*!* days higlight *!*/
+/*section td:last-child {*/
+/*    background-color: #eaf7e9;*/
+/*    font-weight: bold;*/
+/*    text-align: center;*/
+/*}*/
 
 form label {
     font-weight: bold;
 }
 
-form input[type="text"],
-form select {
+form input[type="text"]
+{
     font-size: 0.8em;
     width: 50%;
     padding: 10px;
@@ -127,26 +128,25 @@ form select {
     transition: transform 0.3s ease-in-out;
 
 }
-form input[type="text"]:hover,
-form select:hover {
+form input[type="text"]:hover{
     transform: scale(1.013);
 }
 
-form input[type="submit"] {
-    background-color: #00bfa5;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    font-size: 0.9em;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
+/*form input[type="submit"] {*/
+/*    background-color: #00bfa5;*/
+/*    color: white;*/
+/*    border: none;*/
+/*    padding: 10px 15px;*/
+/*    font-size: 0.9em;*/
+/*    cursor: pointer;*/
+/*    border-radius: 4px;*/
+/*    transition: background-color 0.3s ease;*/
 
-}
+/*}*/
 
-form input[type="submit"]:hover {
-    background-color: #7f8c8d;
-}
+/*form input[type="submit"]:hover {*/
+/*    background-color: #7f8c8d;*/
+/*}*/
 
 /* fieldset */
 fieldset {
@@ -157,7 +157,7 @@ fieldset {
     transition: background-color 0.3s ease;
 }
 fieldset:hover {
-    background-color: #eaf7e9;
+    background-color: lightgray;
 }
 
 legend {
@@ -169,21 +169,21 @@ section label{
     font-size: 0.9em;
 }
 
-section a {
-    display: inline-block;
-    margin-top: 10px;
-    text-decoration: none;
-    background-color: #00bfa5;
-    color: white;
-    padding: 8px 13px;
-    font-size: 1em;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
+/*section a {*/
+/*    display: inline-block;*/
+/*    margin-top: 10px;*/
+/*    text-decoration: none;*/
+/*    background-color: #00bfa5;*/
+/*    color: white;*/
+/*    padding: 8px 13px;*/
+/*    font-size: 1em;*/
+/*    border-radius: 5px;*/
+/*    transition: background-color 0.3s ease;*/
+/*}*/
 
-section a:hover {
-    background-color: #7f8c8d;
-}
+/*section a:hover {*/
+/*    background-color: pink;*/
+/*}*/
 
 
 section ul {
