--- a/Kuanysh_Aitzhanov_style.css
+++ b/Kuanysh_Aitzhanov_style.css
@@ -103,9 +103,9 @@ nav ul li a:hover {
 /*    text-decoration: none;*/
 /*}*/
 
-section a:hover {
-    text-decoration: underline;
-}
+/*section a:hover {*/
+/*    text-decoration: underline;*/
+/*}*/
 
 .your-information {
     display: grid;
