--- a/Kuanysh_Aitzhanov_style.css
+++ b/Kuanysh_Aitzhanov_style.css
@@ -197,3 +197,62 @@ nav {
 h2 {
     color:#19585a;
 }
+
+body {
+    background-color: #ffffff;
+    color: #000000;
+    transition: background-color 0.5s, color 0.5s;
+}
+
+body.dark-mode {
+    background-color: #2c2c2c;
+    color: #f0f0f0;
+}
+
+#theme-toggle {
+    display: none;
+}
+
+.label {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.switch {
+    width: 60px;
+    height: 30px;
+    background-color: #ccc;
+    border-radius: 30px;
+    position: relative;
+    transition: background-color 0.5s;
+}
+
+.switch:before {
+    content: "";
+    position: absolute;
+    width: 28px;
+    height: 28px;
+    background-color: white;
+    border-radius: 50%;
+    top: 1px;
+    left: 1px;
+    transition: transform 0.5s;
+}
+
+#theme-toggle:checked + .switch {
+    background-color: #007bff;
+}
+
+#theme-toggle:checked + .switch:before {
+    transform: translateX(30px);
+}
+
+body.dark-mode h2 {
+    color: #4ec1c7;
+}
+
+
