--- a/Kuanysh_Aitzhanov_style.css
+++ b/Kuanysh_Aitzhanov_style.css
@@ -7,6 +7,7 @@
 /*    line-height: 1.6;*/
 /*}*/
 
+
 /*header {*/
 /*    background-color: #00bfa5;*/
 /*    color: white;*/
@@ -53,7 +54,7 @@ nav ul li a:hover {
 /*    background-color: white;*/
 /*    margin: 20px;*/
 /*    border-radius: 10px;*/
-    /*box-shadow: 4px 7px 3px darkslategray;*/
+/*    box-shadow: 4px 7px 3px darkslategray;*/
 /*}*/
 
 /*hr {
@@ -198,6 +199,10 @@ h2 {
     color:#19585a;
 }
 
+h3 {
+    color:#19585a;
+}
+
 body {
     background-color: #ffffff;
     color: #000000;
@@ -251,8 +256,69 @@ body.dark-mode {
     transform: translateX(30px);
 }
 
-body.dark-mode h2 {
+body.dark-mode h2{
     color: #4ec1c7;
 }
 
+body.dark-mode h3{
+    color: #4ec1c7;
+}
+
+h2 {
+    opacity: 0;
+    transform: translateY(30px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+
+h2.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+h3 {
+    opacity: 0;
+    transform: translateY(30px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+
+h3.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+/*.search-container {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    background-color: #19585a;*/
+/*    border: 1px solid #19585a;*/
+/*    border-radius: 4px;*/
+/*    max-width: 300px;*/
+/*}*/
+
+/*.search-container input[type="text"] {*/
+/*    border: none;*/
+/*    padding: 8px;*/
+/*    font-size: 1em;*/
+/*    outline: none;*/
+/*    width: 100%;*/
+/*}*/
+
+/*.search-container button {*/
+/*    padding: 8px 12px;*/
+/*    background-color: #19585a;*/
+/*    border: none;*/
+/*    cursor: pointer;*/
+/*    font-size: 1em;*/
+/*}*/
+
+/*.search-container button:hover {*/
+/*    background-color: #164a4a;*/
+/*}*/
+
+/*.searchable {*/
+/*    font-size: 1.2em;*/
+/*    margin: 5px 0;*/
+/*}*/
 
