--- a/Kuanysh_Aitzhanov_style.css
+++ b/Kuanysh_Aitzhanov_style.css
@@ -271,14 +271,14 @@ body.dark-mode h3{
 }
 
 
-* {
+h1, h2, h3, a, p, image, card{
     opacity: 0;
     transform: translateY(30px);
     transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 }
 
 
-*.visible {
+h1.visible, h2.visible, h3.visible, a.visible, p.visible, image.visible, card.visible{
     opacity: 1;
     transform: translateY(0);
 }
